# explore-python-react

./: README.md
client/: .env  package.json
server/: .flaskenv  pyproject.toml
server/server/: app.py
server/tests/: test_explore_python_react.py
